# amora-os

./: .gitignore  Azure-MQTT-Connection-Guide.md  Azure-MQTT-Provisioning-Guide.md  Azure-MQTT-Secure-Credentials.md  Azure-MQTT-Service-Comparison.md  Azure-MQTT-Testing-Validation.md  README.md  pyproject.toml  serve_docs.sh
amora-sdk/client/: .eslintrc.js  .gitignore  README.md  jest.config.js  package.json
amora-sdk/client/docs/: API.md  MQTTTopics.md  WebIntegration.md
amora-sdk/client/examples/: basic-usage.js
amora-sdk/client/examples/web-app-example/: app.js  index.html
amora-sdk/client/src/: amora-client.ts  index.test.ts  index.ts  messages.ts  mqtt-client.ts  topic-manager.ts  types.ts
config/: config.json  mpd.conf  pulse-system.pa
docs/: .gitignore  README.md  architecture.md  mkdocs.yml  mqtt_topics.md  pyproject.toml  readme.md
docs/site_docs/: architecture.md  azure_architecture.md  azure_implementation.md  azure_resources.md  client_development.md  configuration.md  data_flow.md  developer_guide.md  device_changes.md  getting_started.md  implementation_plan.md  index.md  integration.md  iot_integration.md  realtime_architecture.md
edge/: Dockerfile  README.md  README_MUSIC_PLAYER.md  dev.ps1  music_player_app.py  pyproject.toml
edge/config/: config.dev.json  mpd.conf  pulse-client.conf
edge/examples/: simple_player.py
edge/samples/playlists/: test_playlist.txt
edge/samples/playlists/test_playlist/: metadata.json
edge/scripts/: example.py  start.sh
edge/src/: __init__.py  main.py
edge/tests/: test_player.py
samples/: README.md
scripts/: play-sample.sh  test-audio.py
sdk/: README.md  pyproject.toml  run_integration_tests.sh  run_mqtt_client.sh  run_mqtt_server.sh  run_tests.sh
sdk/amora_sdk/: __init__.py
sdk/amora_sdk/device/: __init__.py
sdk/amora_sdk/device/app/: __init__.py  app.py
sdk/amora_sdk/device/broker/: __init__.py  client.py  config.py  manager.py  messages.py  topics.py
sdk/amora_sdk/device/iot/: __init__.py  client.py  telemetry.py  twin.py
sdk/amora_sdk/device/player/: __init__.py  mpd_client.py  music_player.py  status_updater.py  utils.py
sdk/examples/: device_app.py
sdk/integration_tests/: README.md  __init__.py  base_test.py  config.py  mpd.conf  setup_config.py
sdk/integration_tests/device/: __init__.py  test_iot_client.py
sdk/integration_tests/device/player/: __init__.py  test_mpd_client.py  test_music_player.py
sdk/test_app/mqtt_test/: README.md  __init__.py  config.py  credentials_template.json  dev_config.json  pyproject.toml  run.py  run_tests.py  run_unit_tests.py
sdk/test_app/mqtt_test/client/: __init__.py  client.py
sdk/test_app/mqtt_test/server/: __init__.py  server.py
sdk/test_app/mqtt_test/tests/: __init__.py  mock_sdk.py  mock_server.py  mocks.py  patched_server.py
sdk/test_app/mqtt_test/tests/integration/: __init__.py  test_server_integration.py
sdk/test_app/mqtt_test/tests/unit/: __init__.py  test_server.py
sdk/tests/: __init__.py
sdk/tests/device/: __init__.py  client_test_module.py  test_client.py  test_interface.py  test_telemetry.py  test_twin.py
sdk/tests/device/app/: __init__.py  test_app.py
sdk/tests/device/broker/: __init__.py  test_client.py  test_manager.py  test_status_updater_integration.py  test_topics.py
sdk/tests/device/player/: __init__.py  test_mpd_client.py  test_music_player.py  test_status_updater.py  test_utils.py
sdk/tests/mocks/: mock_azure.py  mock_mpd.py  mock_mqtt.py  mock_player.py
src/: player.py  utils.py
tests/: test_main.py  test_utils.py
tools/: README.md
tools/testing/: README.md  start_amora_system.sh  start_device_player.sh  start_mqtt_broker.sh  start_web_player.sh  test_e2e_communication.py
web-player/: INTEGRATION.md  README.md  index.html
web-player/css/: styles.css
web-player/js/: amora-sdk-mock.js  player.js
