[tool.poetry]
name = "amora-docs"
version = "0.1.0"
description = "AmoraOS Documentation"
authors = ["AmoraOS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
